entry for day 06 added

--- a/_doors/06.markdown
+++ b/_doors/06.markdown
@@ -14,3 +14,6 @@ Die erste Version dieses Templates habe ich heute auf [GitHub](https://github.co
 
 ### [Lorenz Bischof](https://github.com/lbischof)
 Ich habe heute angefangen für [Respondcms](https://github.com/madoublet/respond) ein Dockerfile zu schreiben. [respondcms-docker](https://github.com/lbischof/respondcms-docker).
+
+### [Philipp Matti](https://github.com/phil-matti)
+[c-for-sys-linux](https://github.com/phil-matti/c-for-sys-linux) Ich habe noch die verwendeten Libraries kommentiert und ein Programm geschrieben das in ein File schreiben kann und ein paar kleinere Anpassungen gemacht.
