--- a/_doors/03.markdown
+++ b/_doors/03.markdown
@@ -29,7 +29,7 @@ Mit den Farben möchte ich übrigens alte EGA-Zeiten aufleben lassen - also brau
 Ich habe schon vor zwei Jahren begonnen für mich ein Framework für Prototyping von Webapplikationen auf Basis von Meteor.js zu entwicklen. Ich habe die Advents Challenge als Anlass genommen, das Projekt endlich unter eine MIT Lizenz gestellt. [Dokumentation](https://rolandstuder.github.io/jeizinen-meteor/index.html).
 
 ### [Anselm Strauss](https://github.com/amsibamsi)
-Kleine Commits am eigenen Home Profil, Antwort auf gemeldetes Problem mit vim-go Plugin. Siehe Github [History](https://github.com/amsibamsi?tab=contributions&from=2015-12-03).
+Kleine Commits am eigenen Home Profil, Antwort auf gemeldetes Problem mit vim-go Plugin. <https://github.com/amsibamsi/profile> <https://github.com/fatih/vim-go/issues/639>
 
 ### [René Moser](http://renemoser.net/about/)
 "Am Abend vom 02.12. habe ich beim Implementieren vom Integrationstest
