--- a/_doors/07.markdown
+++ b/_doors/07.markdown
@@ -19,3 +19,7 @@ Ein Minicommit an mein prototyping framework. Autobinding funktioniert jetzt auc
 
 ### [Philipp Grogg](https://github.com/gro-gg)
 Refactoring des Java Profilers [modjprof](https://github.com/gro-gg/modjprof).
+
+### [Janiss Binder](https://github.com/janissbinder)
+Heute habe ich im Cryptopus einen Bug behoben, damit die Teams wieder angezeigt werden und eine neue Wiki Seite zum Thema Permissions erstellt [Cryptopus](https://github.com/puzzle/cryptopus).
+
