added first contribution day 8

--- a/_doors/08.markdown
+++ b/_doors/08.markdown
@@ -1,7 +1,11 @@
 ---
 day: 	8
-title:	Es geht weiter...
-active: false
+title:	Die erste Woche ist geschaft.
+active: true
 ---
+
+
+### [Thomas Philipona](https://github.com/phil-pona)
+Der [Pull Request](https://github.com/openshift/sti-wildfly/pull/65) von gestern wurde gemerged.
 
 
