--- a/_doors/09.markdown
+++ b/_doors/09.markdown
@@ -23,4 +23,8 @@ Mein [pull request](https://github.com/phil-matti/ipa-latex-template/pull/1) von
 Refactoring des Java Profilers [modjprof](https://github.com/gro-gg/modjprof).
 
 ### [Martin Gafner](https://github.com/mgafner)
-Ich habe mich in mein vor 5 Jahren gestartetes Projekt [fadecut](https://github.com/micressor/fadecut) wieder eingearbeitet und einige Issues erfasst. 
+Ich habe mich in mein vor 5 Jahren gestartetes Projekt [fadecut](https://github.com/micressor/fadecut) wieder eingearbeitet und einige Issues erfasst.
+
+### [Max Burri](https://github.com/mburri)
+Nachdem ich einige materielle Dinge in die Open Source Welt entlassen hatte, habe ich mich jetzt wieder meinem [Projekt](https://github.com/mburri/break-out) gewidmet.
+Dabei habe ich gemerkt, dass ich ziemlich auf dem Holzweg war, und habe begonnen, meine Applikation umzubauen - wodurch jetzt alles einfacher wird. Im Moment ist aber alles ein bisschen ein durcheinander - aber die Challange dauert noch ein paar Tage an...
