--- a/_doors/10.markdown
+++ b/_doors/10.markdown
@@ -1,7 +1,10 @@
 ---
 day: 	10
-title:	Es geht weiter...
-active: false
+title:	Einer geht noch, einer geht noch rein...
+active: true
 ---
 
+
+### [Thomas Philipona](https://github.com/phil-pona)
+Ich habe heute die Issues am [sti-php Image](https://github.com/phil-pona/sti-php) gefixed und einen entsprechenden [Pull Request](https://github.com/openshift/sti-php/pull/75) erstellt. Mal schauen, was der OpenShift-Bot dazu meint ;-)
 
