--- a/_doors/10.markdown
+++ b/_doors/10.markdown
@@ -13,4 +13,4 @@ Ich habe heute die Issues am [sti-php Image](https://github.com/phil-pona/sti-ph
 Ich habe heute im [Cryptopus](https://github.com/puzzle/cryptopus) ein feature implementiert, damit nur noch admins Teams löschen können.
 
 ### [Lorenz Bischof](https://github.com/lbischof)
-Damit mein [Dockercontainer](https://github.com/lbischof/respondcms-docker) einfach in die Produktion deployed werden kann, habe ich <xip.io> eingebaut. Dies ermöglicht Subdomains während der Entwicklung ohne DNS Änderungen.
+Damit mein [Dockercontainer](https://github.com/lbischof/respondcms-docker) einfach in die Produktion deployed werden kann, habe ich [xip.io](http://xip.io) eingebaut. Dies ermöglicht Subdomains während der Entwicklung ohne DNS Änderungen.
