--- a/_doors/10.markdown
+++ b/_doors/10.markdown
@@ -14,3 +14,6 @@ Ich habe heute im [Cryptopus](https://github.com/puzzle/cryptopus) ein feature i
 
 ### [Lorenz Bischof](https://github.com/lbischof)
 Damit mein [Dockercontainer](https://github.com/lbischof/respondcms-docker) einfach in die Produktion deployed werden kann, habe ich [xip.io](http://xip.io) eingebaut. Dies ermöglicht Subdomains während der Entwicklung ohne DNS Änderungen.
+
+### [Pascal Simon](https://github.com/psunix)
+[Cryptopus](https://github.com/puzzle/cryptopus): Heute habe ich den Team Seeder gefixt.
