Contributions to fadecut

--- a/_doors/12.markdown
+++ b/_doors/12.markdown
@@ -4,4 +4,10 @@ title:	Es geht weiter...
 active: false
 ---
 
-
+### [Martin Gafner](https://github.com/mgafner)
+[fadecut](https://github.com/micressor/fadecut): 
+* Ich habe weitere Issues erfasst und ein wenig sortiert, Labels umbenannt und den Milestone für Version 0.2.0 erfasst. 
+* Auf Github habe ich eine Organisation für fadecut erstellt [Organisation Fadecut](https://github.com/fadecut)
+* Eine erste Version für ein Logo erstellt
+* Eine Funktion erstellt, die das Auflisten aller vorhandenen fadecut Profile ermöglicht
+ 
